add: authentification et swagger
